--- a/vr-environments.html
+++ b/vr-environments.html
@@ -35,8 +35,18 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Opdrachten</h1>
-	    	<p></p>
+	    	<h1>Opdracht</h1>
+	    	<p>Voor de opdracht van ‘virtual reality-environment’ hebben ik samen met een paar groepsgenoten een projectie gemaakt. De projectie is gemaakt met het programma ‘MadMapper’ en hiermee kunnen projecties gemaakt worden die op bijvoorbeeld een specifiek voorwerp perfect past. De projectie kan verschillende interactiviteiten bevatten en gebruiken, waardoor hij iets anders laat zien. </p>
+
+	    	<p>Wij hebben ervoor gekozen om twee projecties te maken: een projectie met een afbeelding van appels en een projectie met kwallen die bewegen op de beat, waarbij de helderheid van de afbeelding bepaald wordt door de geluiden uit de omgeving. </p>
+
+	    	<p>De afbeelding van de appels was ons eerste experiment. Wij vonden een piepschuim mal in de vorm van een rondje, hebben vervolgens de afbeelding rond uitgesneden en gepositioneerd op de ronde piepschuim mal. Daarna hebben wij een specifieke input en output aangegeven, de input was de geluiden uit de omgeving en de output was dat de afbeelding daardoor een soort video werd met verschillende helderheiden.</p>
+
+	    	<p>De kwallen bewegen op een Afrikaans nummer, je ziet ze op video dan ook op de beat bewegen. Omdat er veel geluiden, beats, etc. in het nummer voorkomen, gaan de kwallen aardig te keer. We hebben het liedje op een telefoon af laten spelen, naast de computer, zodat de computer dit goed kon horen. Vervolgens hebben we in MadMapper aangegeven dat de video moet bewegen op de beat van het nummer. Dit vonden wij er heel leuk en grappig uit ziet. En heb ik met deze opdracht ook veel geleerd over projecties, hoe het werkt en wat je er allemaal mee kan doen. </p>
+
+	    	<video src="images/vr-appel.mp4" controls muted class="vr-video"></video>
+	    	<video src="images/vr-eindopdracht.mp4" controls muted class="vr-video"></video>
+	    	<p>De video's zijn gemaakt door mijn groepsgenoot, van deze opdracht, Eva van Gool.</p>
 	    </main>
 
 	    <footer class="grid-item foot">
