--- a/arduino.html
+++ b/arduino.html
@@ -28,7 +28,7 @@
 				<li><a href="playfulinteractions.html">Playful Interactions</a></li>
 				<li><a href="artificialcreatures.html">Artificial Creatures</a></li>
 				<li><a href="ar-vr.html">AR & VR</a></li>
-				<li><a href="arduino.html">Arduino</a></li>
+				<li><a href="arduino.html" class="li-active">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
 				<li><a href="computervision.html">Computer Vision</a></li>
 				<li><a href="excursion.html">Excursion</a></li> 
