--- a/vr-environments.html
+++ b/vr-environments.html
@@ -6,7 +6,7 @@
 
 		<link type="text/css" href="styles/style.css" rel="stylesheet" />
 
-		<title>Portfolio</title>
+		<title>HCI-Portfolio</title>
 	</head>
 	<body>
 	  	<header class="grid-item header">
@@ -27,7 +27,7 @@
 				<li><a href="artificialcreatures.html">Artificial Creatures</a></li>
 				<li><a href="ar-vr.html">AR & VR</a></li>
 				<li><a href="arduino.html">Arduino</a></li>
-				<li><a href="vr-environments.html">VR environments</a></li>
+				<li><a href="vr-environments.html" class="li-active">VR environments</a></li>
 				<li><a href="computervision.html">Computer Vision</a></li>  
 				<li><a href="excursion.html">Excursion</a></li> 
 				<li><a href="labweeks.html">Lab weeks</a></li>    		
@@ -46,7 +46,7 @@
 
 	    	<video src="images/vr-appel.mp4" controls muted class="vr-video"></video>
 	    	<video src="images/vr-eindopdracht.mp4" controls muted class="vr-video"></video>
-	    	<p>De video's zijn gemaakt door mijn groepsgenoot, van deze opdracht, Eva van Gool.</p>
+	    	<p>De video's zijn gemaakt door mijn groepsgenoot Eva van Gool.</p>
 	    </main>
 
 	    <footer class="grid-item foot">
