--- a/wearables.html
+++ b/wearables.html
@@ -6,7 +6,7 @@
 
 		<link type="text/css" href="styles/style.css" rel="stylesheet" />
 
-		<title>Portfolio</title>
+		<title>HCI-Portfolio</title>
 	</head>
 	<body>
 	  	<header class="grid-item header">
@@ -22,7 +22,7 @@
 	     <nav id="menu" class="inactive">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="wearables.html">Wearables</a></li>
+				<li><a href="wearables.html" class="li-active">Wearables</a></li>
 				<li><a href="playfulinteractions.html">Playful Interactions</a></li>
 				<li><a href="artificialcreatures.html">Artificial Creatures</a></li>
 				<li><a href="ar-vr.html">AR & VR</a></li>
