--- a/artificialcreatures.html
+++ b/artificialcreatures.html
@@ -6,7 +6,7 @@
 
 		<link type="text/css" href="styles/style.css" rel="stylesheet" />
 
-		<title>Portfolio</title>
+		<title>HCI-Portfolio</title>
 	</head>
 	<body>
 	  	<header class="grid-item header">
@@ -24,7 +24,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="wearables.html">Wearables</a></li>
 				<li><a href="playfulinteractions.html">Playful Interactions</a></li>
-				<li><a href="artificialcreatures.html">Artificial Creatures</a></li>
+				<li><a href="artificialcreatures.html" class="li-active">Artificial Creatures</a></li>
 				<li><a href="ar-vr.html">AR & VR</a></li>
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
