--- a/excursion.html
+++ b/excursion.html
@@ -6,7 +6,7 @@
 
 		<link type="text/css" href="styles/style.css" rel="stylesheet" />
 
-		<title>Portfolio</title>
+		<title>HCI-Portfolio</title>
 	</head>
 	<body>
 	  	<header class="grid-item header">
@@ -29,7 +29,7 @@
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
 				<li><a href="computervision.html">Computer Vision</a></li>
-				<li><a href="excursion.html">Excursion</a></li> 
+				<li><a href="excursion.html" class="li-active">Excursion</a></li> 
 				<li><a href="labweeks.html">Lab weeks</a></li>    		
 			</ul>
 	    </nav>
