--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	    <nav id="menu" class="inactive">
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html" class="li-active">Home</a></li>
 				<li><a href="wearables.html">Wearables</a></li>
 				<li><a href="playfulinteractions.html">Playful Interactions</a></li>
 				<li><a href="artificialcreatures.html">Artificial Creatures</a></li>
