--- a/excursion.html
+++ b/excursion.html
@@ -29,19 +29,27 @@
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
 				<li><a href="computervision.html">Computer Vision</a></li>
-				<li><a href="excursion.html" class="li-active">Excursion</a></li> 
-				<li><a href="labweeks.html">Lab weeks</a></li>    		
+				<li><a href="excursion.html" class="li-active">Excursie</a></li> 
+				<li><a href="labweeks.html">Lab weken</a></li>    		
 			</ul>
 	    </nav>
 	    
 	    <main class="grid-item main">
-	    	<h1>Opdrachten</h1>
-	    	<p></p>
+	    	<h1>Opdracht</h1>
+	    	<p>Op maandag 27 mei 2019 ben ik naar NEMO in Amsterdam geweest. NEMO is een wetenschappelijk museum voor kinderen. In NEMO zijn er dus allerlei verschillende, wetenschappelijke dingen te doen, van het maken van grote bellen met bellenblaas tot aan een projectie waarmee kinderen de wereld kunnen hebben. </p>
+	    	<p>Tijdens mijn bezoek aan NEMO merkte ik heel duidelijk dat de doelgroep kinderen was, omdat het wemelde van kinderen en ouders, waardoor het voor mij lastig was om goed te zien was er allemaal te doen was en om deze dingen uit te proberen. Toch is het gelukt om een aantal dingen uit te proberen en te kunnen beoordelen. </p>
+	    	<p>Uiteindelijk heb ik gekozen voor de installatie ‘Bouwstenen in de ruimte’, waarbij ik in een soort kamer ging staan met projector. Deze projector kon een projectie van mij maken, maar dan in de vorm van de atomen waar ik van gemaakt ben. Het was dus geen schaduw projectie, maar echt waar een mens van gemaakt is. De installatie is gemaakt met een projector en Augmented Reality; er werd een vorm van informatie toegevoegd aan de echte wereld. Ik vond deze installatie heel erg gaaf, omdat ik over dit onderwerp nooit iets hoor of zie en vooral niet in zo een interactieve vorm. Vooral voor kinderen is het heel interessant om te leren waar mensen van gemaakt zijn, naast de algemene biologie lessen die zij krijgen. </p>
+	    	<img src="images/excursie1.png" class="ex-image" id="halfrotate">
+	    	<img src="images/excursie7.png" class="ex-image">
+	    	<img src="images/excursie8.png" class="ex-image">
+	    	<img src="images/excursie3.jpg" class="ex-image">
+	    	<img src="images/excursie5.jpg" class="ex-image">
+	    	<img src="images/excursie6.jpg" class="ex-image" id="halfrotate">
 	    </main>
 
 	    <main class="grid-item main1">
 	    	<h1>Reflectie</h1>
-	    	<p></p>
+	    	<p>Bij mijn bezoek aan NEMO heb ik veel inspiratie opgedaan voor mogelijkheden van installaties met verschillende technieken. In NEMO waren zo veel verschillende analoge en digitale activiteiten, dat ik mijn ogen uitkeek. Helaas was NEMO vol met kinderen en was er weinig ruimte om zelf de installaties uit te proberen, hierdoor was ik al snel klaar in NEMO. Dit was best wel zonde, omdat ik denk dat als het rustig was geweest, ik er makkelijk twee uur had rond kunnen lopen om alles te bekijken en om ermee te spelen. Misschien een andere keer dan. Wel was NEMO een inspiratiebron en zorgde het voor verse, nieuwe ideeën en mogelijkheden, die goed van pas zullen komen bij de lab weken van volgende week. </p>
 	    </main>
 
 	    <footer class="grid-item foot">
