--- a/wearables.html
+++ b/wearables.html
@@ -29,8 +29,8 @@
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
 				<li><a href="computervision.html">Computer Vision</a></li>
-				<li><a href="excursion.html">Excursion</a></li> 
-				<li><a href="labweeks.html">Lab weeks</a></li>    		
+				<li><a href="excursion.html">Excursie</a></li> 
+				<li><a href="labweeks.html">Lab weken</a></li>    		
 			</ul>
 	    </nav>
 
