--- a/labweeks.html
+++ b/labweeks.html
@@ -37,7 +37,7 @@
 	    <main class="grid-item main">
 	    	<h1>Proces</h1>
 	    	<h3>Dag 1</h3>
-	    	<p>Op dag 1 zijn de groepen en de onderwerpen bekend gemaakt. Ik heb, gelukkig, geplaats in het onderwerp dat ik als eerste gekozen had, namelijk ‘Playful Interfaces’. Mijn groepje bestaat uit vier Nederlandstalige CMD studenten, uit het tweede en derde jaar, namelijk Mirthe, Anne, Kyan en Sjoerd. Als eerste zijn wij begonnen met een ‘scrum-bord’, waarop de termen ‘to do’, ‘doing’ en ‘done’ op staan. Hiermee weet het hele groepje en de docenten wat wij willen doen, wat wij aan het doen zijn en wat wij gedaan hebben. Met mijn groepje heb ik nagedacht over mogelijke ideeën en concepten die bij het onderwerp Playful Interfaces. Dit was nog best wel lastig, maar wel heel informatief. Wij hebben ook met allerlei technieken getest, zoals een Makey Makey en de Leap Motion. Deze technieken kunnen gebruikt worden bij o.a. Playful Interfaces. Dit gaf ons wel een aantal ideeën, over welke technieken wij zouden kunnen gebruiken en of wij hier concepten bij konden bedenken. </p>
+	    	<p>Op dag 1 zijn de groepen en de onderwerpen bekend gemaakt. Ik heb, gelukkig, geplaats in het onderwerp dat ik als eerste gekozen had, namelijk ‘Playful Interfaces’. Mijn groepje bestaat uit vier Nederlandstalige CMD studenten, uit het tweede en derde jaar, namelijk Mirthe, Anne, Kyan en Sjoerd. Ik ben blij met mijn onderwerp en mijn groepje. Als eerste zijn wij begonnen met een ‘scrum-bord’, waarop de termen ‘to do’, ‘doing’ en ‘done’ op staan. Hiermee weet het hele groepje en de docenten wat wij willen doen, wat wij aan het doen zijn en wat wij gedaan hebben. Met mijn groepje heb ik nagedacht over mogelijke ideeën en concepten die bij het onderwerp Playful Interfaces. Dit was nog best wel lastig, maar wel heel informatief. Wij hebben ook met allerlei technieken getest, zoals een Makey Makey en de Leap Motion. Deze technieken kunnen gebruikt worden bij o.a. Playful Interfaces. Dit gaf ons wel een aantal ideeën, over welke technieken wij zouden kunnen gebruiken en of wij hier concepten bij konden bedenken.</p>
 	    	<p>Samen met mijn groepje hebben wij drie concepten kunnen bedenken, alle drie zijn het interactieve spellen. Maar wij willen graag iets maken wat goed gedrag beïnvloed of motiveert, maar dit is nog best lastig hebben we gemerkt. </p>
 	    	<figcaption>Mijn groepje aan het werk --- Ons scrum bord --- 'Makey Makey Go'</figcaption>
 	    	<img src="images/lw-dag1.jpg" class="lab-image">
@@ -62,9 +62,20 @@
 	    	<hr>
 
 	    	<h3>Dag 3</h3>
-	    	<p></p>
-	    	<img src="">
+	    	<p>Dag 3 is aangebroken, en we begonnen de dag om 9:30 met een presentatie van Joost Broekens, professor van de Universiteit Leiden. Joost heeft heel veel verteld over zijn werk met Artificial Intellegence, ofwel robots. Hij bouwt en merkt met allerlei robots en heeft hier allerlei voorbeelden van laten zien. Ook liet hij films zien waarin menselijke robots gebruikt werden en wat zij konden. Het onderwerp van de presentatie was erg interessant, maar de presentie duurde heel lang, waardoor ik niet goed mijn concentratie erbij kon houden.</p>
+	    	<img src="images/lw-dag3-joost.png" class="lab-image">
+	    	<img src="images/lw-dag3-scrum.JPG" class="lab-image">
 
+	    	<p>Verder hebben we vandaag de ons concept verder uitgewerkt. Het concept heet de play pot, waarbij de wc-ervaring leuker gemaakt wordt, want zeg nou zelf, naar de wc gaan is saai. Het is de bedoeling dat er een wc-hok gemaakt wordt, waarin de wc-ervaring nagebootst wordt, maar is deze variant veel leuker. In het wc-hok zit namelijk een spel geïmplementeerd in de mat op de grond. Vandaag hebben we hierover gebrainstormd, over de mogelijkheden, materialen en sensoren. Na deze details besproken te hebben, zijn we gaan nadenken over een spel dat leuk is om te spelen op de WC. We hebben een spel gevonden en dit spel gaan we bouwen en vervolgens uittesten op de interactieve mat. </p>
+	    	<img src="images/lw-dag3-spellen.jpg" class="lab-image">
+
+	    	<p>Na de pauze ben ik met mijn groepje naar Gamma geweest om te kijken welke materialen we nodig gaan hebben voor het wc-hokje. Alles is opgemeten en uitgerekend, en volgende week gaan we beginnen met het bouwen van het wc-hokje. Ook moeten we nog een wc-pot zien te vinden… Hopelijk kunnen we dit ergens gratis op de kop tikken. </p>
+
+	    	<img src="images/lw-dag3-planning.jpg" class="lab-image">
+
+	    	<p>Morgen gaan wij ons allen volledig focussen op het maken en testen van de interactieve mat. Ik ben heel benieuwd hoe dat gaat uitpakken, of het gaat werken en hoe het er uiteindelijk uit gaan zien. Wel heb ik super veel zin om echt met mijn handen aan het werk te gaan met ons concept, zodat het concept vorm begint te krijgen en het concept echt tot leven gaat komen. </p>
+
+	    	<img src="images/lw-dag3.JPG" class="lab-image">
 	    	<hr>
 
 	    	<h3>Dag 4</h3>
