--- a/labweeks.html
+++ b/labweeks.html
@@ -79,20 +79,49 @@
 	    	<hr>
 
 	    	<h3>Dag 4</h3>
-	    	<p></p>
+	    	<p>Het is alweer dag vier, ofwel een derde van de lab weken zijn al voorbij. De afgelopen dagen waar heel zwaar, maar toch wel leuk en ook snel voorbijgegaan. </p>
+	    	
+	    	<p>In de ochtend kregen we een presentatie van Teun Verkerk over zijn werk en Artificial Creatures. Teun is een Interaction Designer die veel projecten heeft gedaan, zowel in Nederland als in het buitenland. Teun had ook 1 project meegenomen, namelijk lichtjes in een gekke omhulsing, die door de stad werd geplaatst en die licht lieten zien en trillingen ging maken. </p>
+	    	<img src="images/lw-dag4-pres.png" class="lab-image">
+	    	<p>Na de presentatie ben ik met mijn groepje naar de Gamma gegaan, om alle planken en balken te halen voor het wc-hokje. Eenmaal terug heeft Kyan gelijk alle platen uitgetekend en is hij gaan zagen. Nu zijn alle planken en balken op maat gezaagd, en hoeven ze alleen nog maar geverfd te worden en uiteindelijk in elkaar gezet te worden!</p>
+	    	<img src="images/lw-dag4-gamma.png" class="lab-image">
+	    	<img src="images/lw-dag4-zagen.png" class="lab-image">
+	    	<img src="images/lw-dag4-zaag.png" class="lab-image">
+	    	<p>Tot slot zijn we druk bezig geweest met het zoeken naar een wc en uiteindelijk is het gelukt om een gratis wc op te halen via Marktplaats. De wc was zo goed als nieuw en wij zijn heel blij met deze vondst! Ik was heel even bang dat het niet ging lukken met een wc krijgen, omdat ze nieuw heel duur zijn, en nu ben ik toch opgelucht dat het concept toch i.i.g. een wc heeft.</p>
+	    	<img src="images/lw-dag4-zoeken.png" class="lab-image">
+	    	<img src="images/lw-dag4-wc.png" class="lab-image">
 	    	<img src="">
 
 	    	<hr>
 
 	    	<h3>Dag 5</h3>
-	    	<p></p>
+	    	<p>Dag 5 begon weer met een presentatie van een gast spreker, namelijk Marcelle Gomez Maureira, een man met veel achtergronden en vooral veel ervaring heeft in het maken en ontwerpen van videogames. Hij vertelde vandaag over Playful Interfaces, het onderwerp dat ik heb, en ik vond het heel interessant om van hem een aantal tips en tricks te krijgen over dit vakgebied. </p>
+	    	<img src="images/lw-dag5-pres.png" class="lab-image">
+	    	<p>Na de presentatie was het tijd om de planken en balken te gaan verven, dit heb ik samen met Anne en Mirthe gedaan. De verf was droogde supersnel, waardoor wij heel snel al alle planken twee keer konden verven en ook al snel de achterkant. </p>
+	    	<img src="images/lw-dag5-verven.png" class="lab-image">
+	    	<img src="images/lw-dag5-handen.png" class="lab-image">
+	    	<img src="images/lw-dag5-verf.png" class="lab-image">
+	    	<p>Ook zijn ons spel en het logo afgemaakt vandaag, waarbij het spel echt heel fijn is. Nu kan de interactieve mat gekoppeld worden aan het spel en is het belangrijkste onderdeel van ons concept klaar. Ook het logo past heel goed bij ons concept en de gedachten erachter. </p>
+	    	<img src="images/lw-dag5-logo.png" class="lab-image">
+	    	<p>Ik ben blij dat deze dag wederom een zeer productieve dag was, waarbij er genoeg tijd was om hard te werken en om te chillen. Ik kijk ook uit naar de volgende lab dag, dinsdag 11 juni, want dan gaan wij ons wc-hokje echt bouwen!</p>
 	    	<img src="">
 
 	    	<hr>
 
 	    	<h3>Dag 6</h3>
-	    	<p></p>
-	    	<img src="">
+	    	<p>Een nieuwe week is aangebroken en daarbij hoort dag 6 van de lab weken. Dag 6 staat ook wel bekend het de bouw namelijk. Ik heb namelijk met mijn groepje een hele hoop gebouwd vandaag. </p>
+	    	<p>Eerst ben ik met mijn groepje twee lijsten gaan opstellen, namelijk de lijst voor de eisen van ons product en de eisen voor de omgeving waar wij onze expo gaan houden. Deze lijsten wilde de docenten graag hebben voor inventarisatie en zodat zij een schema kunnen maken voor de plaatsen van alle groepjes tijdens de expo aanstaande vrijdag. Alle eisen/middelen die mijn groepje en ik hebben, hebben we gelukkig al aangeschaft of gebouwd. Verder hopen wij dat onze installatie ergens in een hoek geplaatst kan worden, zodat het nog meer lijkt op een echt wc-hokje. </p>
+	    
+	    	<p>Vervolgens is het bouwen begonnen. Ik ben samen met Kyan, Anne en Mirthe aan de slag gegaan met het bouwen van het wc-hokje. Gelukkig is Kyan naast student ook bouwvakker, dus hij wist precies hoe alles in elkaar gezet moest worden en hoe er een stevige constructie gemaakt kon worden. Binnen no time waren de geraamtes van het hokje al af en kon het allemaal in elkaar gezet worden. Daarna zijn de planken, ofwel de muren, erin geschroefd en was ons wc-hokje al zo goed als klaar. Wel moest de vloer nog op maat gezaagd worden. Hier is tot het laatste moment mee gewacht, omdat het zonde is om per ongeluk verkeerd te zagen en nu konden we precies opmeten hoe groot het vlak moest zijn. Na de vloer kon de wc-pot er ook in en was de basis van het wc-hokje al bijna af. Alleen nog de voetpedaaltjes, waarmee het spel uiteindelijk bestuurd wordt, en dat is dan het tijd voor de aankleding. </p>
+	    	<img src="images/lw-dag6-1.png" class="lab-image">
+	    	<img src="images/lw-dag6-2.png" class="lab-image">
+	    	<img src="images/lw-dag6-3.png" class="lab-image">
+	    	<img src="images/lw-dag6-4.png" class="lab-image">
+	    	<img src="images/lw-dag6-5.png" class="lab-image">
+	    	<img src="images/lw-dag6-6.png" class="lab-image">
+	    	<img src="images/lw-dag6-7.png" class="lab-image">
+	    	<img src="images/lw-dag6-8.png" class="lab-image">
+	    	<p>Week twee begon dus heel productief en motiverend, aangezien alles gedaan is wat gedaan moest worden en we precies op schema lopen. Morgen gaan we het wc-hokje helemaal schoonmaken, misschien ergens nog een likje verf en het scherm voor het spel monteren. Daarna kan er een begin gemaakt worden aan de inrichting van het wc-hokje. </p>
 
 	    	<hr>
 
