--- a/labweeks.html
+++ b/labweeks.html
@@ -120,6 +120,7 @@
 	    	<img src="images/lw-dag6-5.png" class="lab-image">
 	    	<img src="images/lw-dag6-6.png" class="lab-image">
 	    	<img src="images/lw-dag6-7.png" class="lab-image">
+	    	<video src="images/lw-dag6.mp4" controls muted class="lab-video"></video>
 	    	<img src="images/lw-dag6-8.png" class="lab-image">
 	    	<p>Week twee begon dus heel productief en motiverend, aangezien alles gedaan is wat gedaan moest worden en we precies op schema lopen. Morgen gaan we het wc-hokje helemaal schoonmaken, misschien ergens nog een likje verf en het scherm voor het spel monteren. Daarna kan er een begin gemaakt worden aan de inrichting van het wc-hokje. </p>
 
