--- a/ar-vr.html
+++ b/ar-vr.html
@@ -77,7 +77,11 @@
 
 	    <main class=" grid-item main3">
 	    	<h1>Unreal Engine</h1>
-	    	<p>Tijdens een van mijn workshops heb ik gewerkt met het programma 'Unreal Engine'. In dit programma </p>
+	    	<p>Unreal engine is een programma dat gebruikt wordt om games mee te maken. Er worden zowel computerspellen als PlayStation spellen als VR-spellen mee gemaakt.  Het spel Fortnite is bijvoorbeeld ook in Unreal engine gemaakt. Voor mijn eerste opdracht moest ik in Unreal engine een banaan maken en deze moest uiteindelijk ook kunnen draaien. Gelukkig was de tutorial die erbij hoorde duidelijk en overzichtelijk, waardoor het mij goed lukte om een draaiende banaan te maken. </p>
+	    	<img src="images/vr-banaan.png" class="vr-image">
+	    	<video src="images/vr-draaiende-banaan.MOV" controls muted class="vr-video"></video>
+	    	<p>Voor de tweede opdracht moest ik een spel gaan maken, waarbij de banaan een groot onderdeel van was. De speler was een rode kubus en die kon zich voortbewegen in het veld, middel de toets w, a, s en d. In het veld kon ik meerdere bananen plaatsen en deze bananen moesten ‘gepakt’ worden door de rode kubus. Na veel proberen en crashen van mijn computer is het toch gelukt om het spel te maken. Het maken van een spel vind ik erg lastig om echt te begrijpen, maar met de tweede tutorial was het goed te doen en vond ik het ook gaaf om te zien dat ik echt zelf een spel kon maken. </p>
+	    	<video src="images/vr-spel.MOV" controls muted class="vr-video"></video>
 	    </main>
 
 	    <footer class="grid-item foot">
