--- a/vr-environments.html
+++ b/vr-environments.html
@@ -36,6 +36,7 @@
 
 	    <main class="grid-item main">
 	    	<h1>Opdracht</h1>
+	    	<h3>Mad Mapper</h3>
 	    	<p>Voor de opdracht van ‘virtual reality-environment’ hebben ik samen met een paar groepsgenoten een projectie gemaakt. De projectie is gemaakt met het programma ‘MadMapper’ en hiermee kunnen projecties gemaakt worden die op bijvoorbeeld een specifiek voorwerp perfect past. De projectie kan verschillende interactiviteiten bevatten en gebruiken, waardoor hij iets anders laat zien. </p>
 
 	    	<p>Wij hebben ervoor gekozen om twee projecties te maken: een projectie met een afbeelding van appels en een projectie met kwallen die bewegen op de beat, waarbij de helderheid van de afbeelding bepaald wordt door de geluiden uit de omgeving. </p>
@@ -48,7 +49,7 @@
 	    	<video src="images/vr-eindopdracht.mp4" controls muted class="vr-video"></video>
 	    	<p>De video's zijn gemaakt door mijn groepsgenoot Eva van Gool.</p>
 	    </main>
-
+	    
 	    <footer class="grid-item foot">
 	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
