--- a/artificialcreatures.html
+++ b/artificialcreatures.html
@@ -48,7 +48,7 @@
 
 			<p>Als de schuifdeur in de war is en een kleine storing heeft, kan hij snel weer gemaakt worden door de gebruikers. Zij schuiven zijn deuren weer uit elkaar en dan kan de schuifdeur weer rustig zijn werk doen. Soms werkt het ook om hem heel even te laten slapen, dan is alles weer helder in zijn hoofd en kan hij weer goed werken.</p>
 
-			<p>Ook worden de deuren van de schuifdeur vies, omdat mensen aan hem zitten. Dit vindt hij heel vervelend, maar gelukkig heeft hij lieve mensen om hem heen die ervoor zorgen dat hij weer spic en span eruitziet. 
+			<p>Ook worden de deuren van de schuifdeur vies, omdat mensen aan hem zitten. Dit vindt hij heel vervelend, maar gelukkig heeft hij lieve mensen om hem heen die ervoor zorgen dat hij er weer spic en span uitziet. 
 			</p>
 	    </main>
 
