--- a/playfulinteractions.html
+++ b/playfulinteractions.html
@@ -48,9 +48,8 @@
 
 			<p>Doordat de inrichting van het museum geprojecteerd wordt, kan het gemakkelijk interactief gemaakt worden door bepaalde sensoren. Er kunnen dus ook spellen toegevoegd worden of door middel van ‘swipe’ bewegingen met de armen kan bijv. de inrichting aangepast worden of kan er gescrold worden door een galerij met foto’s en video’s.</p>
 
-			<p><b>TEKENEN/VISUALISATIE HOE HET CONCEPT TECHNISCH WERKT</b></p>
 			<p>De kamer bestaat uit vier witte muren en mogelijk een soort plafond. Omdat er in school niet veel ruimte is, is het het beste als de muren op wielen geplaats worden, zodat het museum snel verplaats kan worden en makkelijk in en uit elkaar gehaald kan worden. Door middel van ‘spatial augmented reality’ wordt er een kamer ingericht die ervoor zorgt dat de kamer eruitziet als een museum dat past bij het gekozen onderwerp van de studenten. Daarnaast zorgt de ‘spatial AR’ ervoor dat de activiteiten binnen het museum interactief zijn en continu verandert kunnen worden, als het nodig is.</p>
-			</p>
+			<img src="images/playful-idee.png" id="playful-img">
 	    </main>
 
 	    <main class="grid-item main1">
@@ -63,6 +62,8 @@
 
 			<p>Deze Playful Interface is duidelijk een individueel ‘spel’, daarnaast is het noch coöperatief noch competitief, omdat het een toevoeging van een animatie is en geen spel. Het is een onderling afhankelijk spel dus, en daarbij hoort alleen de functies ‘gedeelde object’ en ‘gedeelde ruimte’. 
 			</p>
+
+			<p>Ik vind het heel leuk om te zien hoe allerlei verschillende ontwikkelaars en ontwerpers van een saaie, normale bezigheid iets leuks en grappigs maken. Ik vind het interessant omdat het mij stimuleert om buiten de box na te denken en niet alleen aan nieuwe dingen te denken, maar ook aan bestaande dingen te denken en die juist leuker maken. </p>
 			<div id="playful-tech">
 				<img src="images/playful-poe.jpg" id="playful-img">
 
