--- a/labweeks.html
+++ b/labweeks.html
@@ -265,6 +265,8 @@
 	    	<img src="images/lw-product-9.png" class="lab-image">
 	    	<img src="images/lw-product-10.png" class="lab-image">
 	    	<img src="images/lw-product-11.png" class="lab-image">
+	    	<p>Video van het eindresultaat</p>
+	    	<video src="images/HCI.mp4" controls class="lab-video"></video>
 	    </main>
 
 	    <main class="grid-item main2">
